fixing TestPropertySource in the web-app integration tests